# TRPG

./: .gitignore  TRPG.cabal
data/: actions.yaml  dictionary.yaml  grammar-dictionary.yaml  irregular-verbs.yaml  materials.yaml  object-classes.yaml  relations.yaml  room.yaml  space-classes.yaml
src/: BaseTypes.hs  Dictionary.hs  DictionaryTests.hs  EnglishParser.hs  EnglishTokenizer.hs  EnglishWords.hs  MaterialTypes.hs  ObjectTypes.hs  ParseUtilities.hs  RelationTypes.hs  SpaceTypes.hs  TaggedDictionary.hs  Test.hs  Types.hs  Utils.hs
src/Dictionary/: Instances.hs  Tests.hs  Types.hs  Utils.hs
src/English/: Parser.hs  Tokenizer.hs  Words.hs
src/Game/: BaseTypes.hs  MaterialTypes.hs  ObjectTypes.hs  RelationTypes.hs  SpaceTypes.hs  Types.hs
src/OldFiles/: GrammarParser.hs
