name:                TRPG
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/TRPG#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, Test, BaseTypes, RelationTypes, MaterialTypes, ObjectTypes, SpaceTypes
  build-depends:       base >= 4.7 && < 5
                     , yaml
                     , containers
                     , unordered-containers
                     , text
                     , aeson
                     , vector
                     , bytestring
                     --, vinyl
  default-extensions:  GADTs, StandaloneDeriving, DataKinds, KindSignatures, OverloadedStrings
  default-language:    Haskell2010

executable TRPG-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TRPG
  default-extensions:  GADTs, StandaloneDeriving, DataKinds, KindSignatures, OverloadedStrings
  default-language:    Haskell2010

test-suite TRPG-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TRPG
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  GADTs, StandaloneDeriving, DataKinds, KindSignatures, OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TRPG
